# CPersona

./: .gitignore  Dockerfile  README.md  SECURITY.md  SUPPORT.md  admin_handlers.py  cloto-connector.json  config.py  conftest.py  database.py  health.py  maintenance_handlers.py  memory_handlers.py  pyproject.toml  server.py  tasks.py  test_audit_2500.py  test_audit_2500b1.py  test_audit_2500b2.py  test_audit_r3.py  test_autocut_signal.py  test_calibration_formula.py  test_channel_axis_migration.py  test_do_recall_response.py  test_episode_channel.py  test_isolation.py  test_no_persist.py  test_recall_precision.py  test_recall_preview.py  test_recall_quality.py  test_recall_source_id.py  test_scan_window.py  test_schema_v9_migration.py  test_structural_gates.py  test_task_queue.py  test_threshold_calibration.py  test_v2435_bugfixes.py  test_v2436_bugfixes.py  test_v2437_checkup.py  test_v2438_hardening.py  (+2 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
_vendored_mcp_common/: llm_provider.py  mcp_stream_interceptor.py  mcp_utils.py
benchmarks/: README.md  benchmark_latency.py  benchmark_lmeb.py  benchmark_trackb_lmeb.py  budget_batching.py  mps_accel.py  mps_accel_equivalence_gate.py  run_trackb.sh  test_mps_accel_equivalence.py
benchmarks/measurements/: README.md
benchmarks/measurements/lmeb_results/jina-embeddings-v5-text-nano/: _summary.json
benchmarks/measurements/lmeb_results/jina-embeddings-v5-text-nano/jinaai__jina-embeddings-v5-text-nano/8a7f00aac812071b69403df470f1038ec85f8925/: ConvoMem.json  CovidQA.json  DeepPlanning.json  EPBench.json  ESGReports.json  Gorilla.json  KnowMeBench.json  LMEB_SciFact.json  LoCoMo.json  LongMemEval.json  LooGLE.json  MLDR.json  MemBench.json  MemGovern.json  NovelQA.json  PeerQA.json  Proced_mem_bench.json  QASPER.json  REALTALK.json  ReMe.json  TMD.json  ToolBench.json  model_meta.json
benchmarks/measurements/trackb_results_jinanano/: ConvoMem.json  CovidQA.json  DeepPlanning.json  EPBench.json  ESGReports.json  Gorilla.json  KnowMeBench.json  LMEB_SciFact.json  LoCoMo.json  LongMemEval.json  LooGLE.json  MLDR.json  MemBench.json  MemGovern.json  NovelQA.json  PeerQA.json  Proced_mem_bench.json  QASPER.json  REALTALK.json  ReMe.json  TMD.json  ToolBench.json  summary.json
benchmarks/measurements/trackb_results_v2440_bgem3/: ConvoMem.json  CovidQA.json  DeepPlanning.json  EPBench.json  ESGReports.json  Gorilla.json  KnowMeBench.json  LMEB_SciFact.json  LoCoMo.json  LongMemEval.json  LooGLE.json  MLDR.json  MemBench.json  MemGovern.json  NovelQA.json  PeerQA.json  Proced_mem_bench.json  QASPER.json  REALTALK.json  ReMe.json  TMD.json  ToolBench.json  summary.json
benchmarks/measurements/trackb_results_v2440_bgem3.CLAMPED-depth100/: EPBench.json  KnowMeBench.json  LoCoMo.json  LongMemEval.json  REALTALK.json
benchmarks/measurements/trackb_results_v2440_bgem3.INVALID-v2439-window/: EPBench.json  KnowMeBench.json  LoCoMo.json  LongMemEval.json  REALTALK.json
benchmarks/measurements/trackb_results_v2440_minilm/: ConvoMem.json  CovidQA.json  DeepPlanning.json  EPBench.json  ESGReports.json  Gorilla.json  KnowMeBench.json  LMEB_SciFact.json  LoCoMo.json  LongMemEval.json  LooGLE.json  MLDR.json  MemBench.json  MemGovern.json  NovelQA.json  PeerQA.json  Proced_mem_bench.json  QASPER.json  REALTALK.json  ReMe.json  TMD.json  ToolBench.json  summary.json
cpersona/: __init__.py  __main__.py  admin_handlers.py  checks.py  checkup.py  config.py  database.py  health.py  isolation.py  maintenance_handlers.py  memory_handlers.py  operating_context.py  proxy_stdio.py  server.py  tasks.py  utils.py  vector.py
cpersona/_vendored_mcp_common/: __init__.py  llm_provider.py  mcp_stream_interceptor.py  mcp_utils.py  no_persist.py
docs/: CLAUDE_MD_POLICY_STANDARD.md  DEGRADED_ADVISORY_DESIGN.md  OPERATING_CONTEXT_DESIGN.md  RECALL_PREVIEW_TIER_DESIGN.md  RELEASE_LIFECYCLE_STANDARD.md
qa/: issue-registry.json
scripts/: capture-behaviour.py  mutation-proof.py  sync-vendored-mcp-common.sh  verify-issues.sh
skills/cpersona-memory/: SKILL.md
tests/: behaviour_252.py  conftest.py  test_252a2_i1.py  test_252a2_i2.py  test_252a2_i3.py  test_252a2_i4.py  test_252a2_i5.py  test_252a2_i6.py  test_audit_2439.py  test_audit_2500.py  test_audit_2500b1.py  test_audit_2500b3.py  test_audit_r3.py  test_autocut_signal.py  test_calibration_formula.py  test_channel_axis_migration.py  test_config_parsing.py  test_embedding_path.py  test_equivalence_252.py  test_followup_2_4_x.py  test_fts_au_churn.py  test_harness_2500.py  test_health_status.py  test_isolation.py  test_isolation_where.py  test_no_persist.py  test_operating_context.py  test_proxy_stdio.py  test_recall_precision.py  test_refactor_seams_252.py  test_remote_export_cluster.py  test_source_normalization.py  test_store_recall_surface.py  test_structural_gates.py  test_v2435_bugfixes.py  test_v2437_checkup.py  test_v2438_hardening.py
tests/golden/: behaviour_252.json
