[project]
name = "cpersona"
version = "2.5.2a2"
description = "CPersona — Persistent AI memory server with 3-layer hybrid search, confidence scoring, and 29 tools. MIT licensed."
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
keywords = [
    "mcp",
    "model-context-protocol",
    "memory",
    "persistent-memory",
    "semantic-search",
    "vector-search",
    "rag",
    "llm",
    "agent",
    "claude",
]
# PyPI renders these as the sidebar filters (License / Topic / Intended
# Audience). The field was empty until 2.5.2, so the package was absent from
# every faceted search on PyPI. Python versions list only what CI actually
# exercises (3.11 and 3.13) plus 3.12, which lies between them; requires-python
# still admits any 3.11+ interpreter.
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.26.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
]

[project.urls]
# Rendered in the PyPI sidebar. Issues is the one that closes the loop: a user
# who installs from PyPI and hits a defect otherwise has no path back here.
# Changelog points at Releases because this repository keeps no CHANGELOG.md —
# the release notes are the changelog.
Homepage = "https://github.com/Cloto-dev/cpersona"
Repository = "https://github.com/Cloto-dev/cpersona"
Issues = "https://github.com/Cloto-dev/cpersona/issues"
Changelog = "https://github.com/Cloto-dev/cpersona/releases"
Documentation = "https://github.com/Cloto-dev/cpersona#readme"

[dependency-groups]
# Test toolchain (installed by `uv sync --dev`; used locally and in CI).
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
]

[tool.pytest.ini_options]
# A bare `pytest` must never hang. Two failure modes did so historically and are the
# reason the suite was rarely run (so embedding-path regressions reached production):
# a lingering queue-worker, and any embedding call to a non-resident endpoint. A per-test
# timeout turns either into a loud failure instead of an unbounded block, making the
# suite safe to run on every change. The signal method (POSIX) interrupts blocking
# syscalls; the dev and CI platforms are macOS/Linux.
timeout = 60
timeout_method = "signal"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra"
# The suite lives in tests/. Pinning collection there keeps a bare `pytest` from
# wandering into scratch dirs or vendored code (a stray root-level file with a
# stdin read once aborted collection of the whole suite).
testpaths = ["tests"]

[project.scripts]
cpersona = "cpersona.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Package layout: the server modules live under cpersona/, including the
# vendored mcp_common snapshot at cpersona/_vendored_mcp_common/ (see
# scripts/sync-vendored-mcp-common.sh). The root server.py is a shim for the
# git-clone / marketplace path and is deliberately excluded from the wheel.
packages = ["cpersona"]

[tool.hatch.build.targets.wheel.force-include]
# Ship the agent skills with the PyPI artifact (2.5.0b1): pip users previously
# had no way to obtain skills/ without cloning the repo. Placed under the
# package so it imports nothing and pollutes no top-level namespace.
"skills" = "cpersona/skills"

[tool.hatch.build.targets.sdist]
# Anchored patterns: a bare "skills" is a gitignore-style glob and would also
# match .agents/skills/ (local delegation tooling that must not ship).
include = ["/cpersona", "/skills", "/README.md", "/LICENSE", "/pyproject.toml"]

[tool.ruff.lint]
# 2.5.0b2 (bug-114 class prevention): flake8-datetimez bans naive datetime
# CONSTRUCTION statically — the parse-side naive-as-UTC guard in
# _parse_timestamp_utc handles values already in the DB; DTZ keeps new naive
# values from being written by Python code in the first place. The default
# rule set (E4, E7, E9, F) is preserved via extend-select.
extend-select = ["DTZ"]

[tool.ruff.lint.per-file-ignores]
# Tests deliberately construct naive datetimes (e.g. to exercise the bug-114
# naive-guard); benchmarks and scripts are operator-run, not server code.
"tests/*" = ["DTZ"]
"benchmarks/*" = ["DTZ"]
"scripts/*" = ["DTZ"]
